# rust-ed

./: .gitignore  Cargo.toml  README.md
resources/: help_text.txt  sample_text.txt  sample_text_2.txt
src/: application.rs  clipboard.rs  coord.rs  editor.rs  gridcell.rs  gridrow.rs  lib.rs  main.rs  renderer.rs  screen.rs  selection.rs
